skins/oasis/css/core/_page.scss
@import "../mixins/box-shadow";
.WikiaPage {
	border-bottom: 1px solid $color-page-border;
	border-left: 1px solid $color-page-border;
	border-right: 1px solid $color-page-border;
	margin: -59px auto -39px;
	padding-top: 59px;
	&.V2 {
		padding-top: 20px;
		margin: 0px auto -39px;
	}
	position: relative;
	width: $width-outside;
	z-index: 1;
	>h1:first-child {
		display: none;
	}
	.WikiaPageBackground {
		@include opacity($page-opacity);
		background: $color-page;
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}
	.WikiaPageContentWrapper {
		position: relative;
	}
}

.WikiaAdvertPage {
	border-left: 1px solid $color-page-border;
	border-right: 1px solid $color-page-border;
	margin: 0px auto;
	padding-bottom: 0px;
	position: relative;
	width: $width-outside;
	z-index: 1;
	>h1:first-child {
		display: none;
	}
	.WikiaPageBackground {
		@include opacity($page-opacity);
		background: $color-page;
		height: 100%;
		left: 0;
		position: absolute;
		top: 0;
		width: 100%;
	}

	.WikiaPageContentWrapper {
		position: relative;
	}

	#HOME_TOP_LEADERBOARD, #TOP_LEADERBOARD, #CORP_TOP_LEADERBOARD {
		padding: 10px 0 10px 0;
	}
}

.WikiaMainContent {
	float: left;
	position: relative;
	width: $width-outside - 320px;
	z-index: 1;
	// one column layout (no right rail)
	.oasis-one-column & {
		width: $width-outside;
	}
}

.WikiaArticleCategories {
	@include linear-gradient($color-module-shadow, top, $color-page, 50%, $color-module-shadow, 100%);

	border: 1px solid $color-page-border;
	clear: both;
	line-height: 1.8em;
	padding: 10px;
	margin: 10px;
	h1 {
		display: none;
	}
}

.WikiaArticleFooter {
	padding: 10px;
}

#WikiaArticleBottomAd {
	@include clearfix;
	margin: 50px 10px 35px;
}

#PREFOOTER_LEFT_BOXAD {
	float: left;
	margin: 0 15px;
}
#PREFOOTER_RIGHT_BOXAD {
	margin: 0 15px;
}


.WikiaRail {
	float: right;
	padding: 0 10px;
	width: $width-rail;

	.module {
		@include clearfix;
		@include box-shadow(0px, 2px, 5px, darken($color-page,12%));
		background: $color-page;
		border: 1px solid $color-page-border;
		@if lightness($color-page) < 50 {
			@include box-shadow(0px, 2px, 5px, darken($color-page,7%));
			background: $color-module-background;
			border: 1px solid $color-page-border;
		}
		margin-bottom: 10px;
		padding: 16px 8px 8px;
		position: relative;
		header {
			left: -3px;
			font-size: 15px;
			padding: 8px;
			position: absolute;
			width: $width-rail - 12px;
		}
		details {
			em {
				float: left;
			}
		}
		.wikia-button {
			float: right;
		}
		.more {
			float: right;
			font-size: 10px;
			font-weight: bold;
		}
		p {
			line-height: 21px;
			margin: 0;
			padding: 0;
		}

		.wikia-button {
			font-weight: normal;
		}

		h1 {
			font: {
				size: 17px;
				weight: bold;
			}
			margin: {
				top: 7px;
				bottom: 25px;
			}
		}

		h2 {
			@extend h1;
			clear: both;

			margin: {
				top: 0;
				bottom: 10px;
			}
			padding-top: 15px;
			/*border-top: 1px solid $color-page-border;*/
		}

		b {
			font-weight: bold;
		}
		i {
			font-style: italic;
		}

		.line-top {
			border-top: solid 1px $color-page-border;
		}

		.chevron {
			border-top-color: $color-text;
		}
	}
}

#TOP_BOXAD {
	img {
		display: block;
	}
}

.tally {
	@include clearfix;
	font-size: 10px;
	line-height: 1.3em;
	padding-left: 2px;
	text-transform: uppercase;
	em {
		float: left;
		font-size: 30px;
		font-style: normal;
		letter-spacing: -1px;
		line-height: 26px;
		margin-right: 2px;
	}
	span {
		float: left;
		&.fixedwidth {
			width: 61px;
		}
	}
}

.WikiaPagesOnWikiModule {
	padding-top: 9px;
	h1 {
		display: none;
	}
	.sprite.new {
		margin: 0 5px;
		position: relative;
		top: 1px;
	}
	a {
		padding-right: 5px;
	}
	.wikia-button {
		margin-bottom: 0.5em;
	}
}

.WikiaActivityModule {
	h1.activity-heading {
		margin-bottom: 0;
	}
	ul {
		list-style: none;
		margin: 10px 0;
	}
	li {
		font-size: 12px;
		padding: 6px 3px 6px 30px;
		position: relative;
		&:first-child {
			border: 0;
		}
		em {
			display: inline-block;
			font-size: 14px;
			line-height: 17px;
		}
	}
	.sprite {
		position: absolute;
		left: 3px;
		top: 8px;
	}
	.edited-by {
		font-size: 11px;
		margin-top: 2px;
		a {
			color: $color-links;
			font-size: 11px;
		}
	}
	a {
		font-weight: normal;
	}
	.page-title {
		font-size: 14px;
	}
	.more {
		font-weight: bold;
	}
}

.WikiaImageModule {
	h1 {
		display: none;
	}
	img {
		margin: 10px 0;
	}
	.caption {
		margin-bottom: 10px;
		text-align: center;
	}
}

#WikiaSpotlightsModule {
	display: none;
	padding: 8px 8px 8px 15px;
	header {
		background-color: $color-header;
		height: 36px;
		left: -2px;
		padding: 3px 0 0 0;
		position: absolute;
		width: auto;
		h1 {
			@include linear-gradient($color-header, left, $color-header-alt, 0, $color-header, 100%);
			border-bottom: 2px solid $color-page;
			border-top: 1px solid $color-page;
			color: $color-header-text;
			display: block;
			font-size: 15px;
			font-weight: normal;
			height: 33px;
			margin: 0;
			padding: 0 11px;
			.logo {
				filter:progid:DXImageTransform.Microsoft.Matrix(Dx=0, Dy=0, M11=0.7, M12=0, M21=0, M22=0.7);
				-moz-transform: matrix(0.7, 0, 0, 0.7, -16px, -3px);
				-webkit-transform: matrix(0.7, 0, 0, 0.7, -15, -2);
				left: 8px;
				position: relative;
				top: 7px;
			}
		}
		.banner-corner-left {
			border: 1px solid transparent;
			border-color: $color-header $color-header transparent transparent;
			bottom: 0;
			width: 0;
		}
		.banner-corner-right {
			border: 19px solid transparent;
			border-right-width: 20px;
			border-right-color: $color-module-background;
			position: absolute;
			right: 0px;
			top: 0px;
		}
	}
	ul {
		margin-top: 65px;
		list-style: none;
		li {
			@include clearfix;
			height: 95px;
			margin-bottom: 30px;
			.highlight {
				float: left;
				margin-right: 10px;
				img {
					border: 1px solid $color-page-border;
					height: 95px;
					width: 95px;
				}
			}
			em {
				display: block;
				font-weight: bold;
				margin-bottom: 2px;
			}
			.seemore {
				display: block;
				font-size: 12px;
				font-weight: normal;
				margin-top: 2px;
			}
		}
		/* remove placeholder later */
		.placeholder {
			background-color: red;
		}
	}
	.WikiaSpotlight {
		background-color: transparent;
		display: block;
		margin: 30px 0;
		img {
			display: block;
		}
	}
	.wikia-button {
		margin: 0 12px 12px 0;
		padding: 0 7px;
	}
}

#RIGHT_SKYSCRAPER {
	@extend .module;
	text-align: center;
	img {
		margin: 40px auto;
	}
}

.WikiaSpotlight {
	background-color: $color-page;
	color: $color-text;
	display: inline-block;
	width: 270px;
}

.WikiaRelatedVideoModule {
	h1 {
		margin-bottom: 0;
	}
	.WikiaRelatedVideoContent {
		overflow: hidden;
		margin-left: 18px;
		a {
			font-size: 10px;
			font-weight: bold;
		}
	}
	.WikiaRelatedVideoContentContainer {
		margin-top: -50px;
	}
}

.WikiaRelatedVideoSpotlightModule {
	width: 255px;
	height: 123px;
	background-color: black;
	padding: 0px;
	.WikiaRelatedVideoSpotlightModuleWrapper {
		width: 240px;
		height: 123px;
		margin-left: 10px;
		overflow: hidden;
		.WikiaRelatedVideoContentContainer {
			position: relative;
			a {
				font-size: 10px;
				font-weight: bold;
				float: right;
				color: white;
			}
		}
	}

}

#contentSub {
	font-size: 14px;
	line-height: 16px;
	padding: 10px;

	.commentslikes {
		display: inline;
		font-size: 12px;
		a:hover {
			text-decoration: none;
		}
	}
}

