trunk: bugId: 11171 wrap text in right rail
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@44002 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/oasis/css/core/_page.scss
+++ b/skins/oasis/css/core/_page.scss
@@ -119,6 +119,8 @@
 		margin-bottom: 10px;
 		padding: 16px 8px 8px;
 		position: relative;
+		word-wrap: break-word;		
+		
 		header {
 			left: -3px;
 			font-size: 15px;
